fix: refactor edit task input structure and styles for better alignment

--- a/src/app/main-content/board/task-card/task-details/edit-task/edit-task.component.scss
+++ b/src/app/main-content/board/task-card/task-details/edit-task/edit-task.component.scss
@@ -151,7 +151,6 @@
           $jc: space-between,
           $alit: flex-start
         );
-        
 
         button {
           @include all.d-flex($flexdir: row, $cgap: 0.8rem);
@@ -301,7 +300,7 @@
               width: 100%;
               @include all.d-flex(
                 $flexdir: row,
-                $jc: flex-start,
+                $jc: space-between,
                 $alit: center
               );
               gap: 0.5rem;
@@ -312,24 +311,23 @@
                 overflow: hidden;
                 white-space: nowrap;
                 height: 3rem;
-                @include all.d-flex($flexdir: center);
+                @include all.d-flex($flexdir: row, $jc: space-between);
+              }
+
+              .edit-input {
+                width: 90%;
+                height: 3rem;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+                border-style: none;
+                border-bottom: 1px solid all.$lightblue2;
+                border-radius: 0%;
               }
 
               .edit-wrapper {
-                width: auto;
                 @include all.d-flex($flexdir: row, $jc: space-between);
                 gap: 1rem;
-
-                .edit-input {
-                  width: 90%;
-                  height: 3rem;
-                  text-overflow: ellipsis;
-                  white-space: nowrap;
-                  overflow: hidden;
-                  border-style: none;
-                  border-bottom: 1px solid all.$lightblue2;
-                  border-radius: 0%;
-                }
 
                 .edit-subtask {
                   @include all.d-flex(
